--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,17 @@ actix-web = "4"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 reqwest = "0.11"
 serde = { version = "1", features = ["derive"] }
+config = "0.13"
+
+[dependencies.sqlx]
+version = "0.6"
+default-features = false
+# feature flags
+features = [
+	"runtime-tokio-rustls", # use tokio runtime as TLS backend
+	"macros", # for sqlx::query! macro
+	"postgres",
+	"uuid",
+	"chrono", # support for mappping SQL timestampz to the DateTime<T>
+	"migrate",
+]
