--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,8 @@ serde = { version = "1", features = ["derive"] }
 config = "0.13"
 uuid = {version = "1", features = ["v4"]}
 chrono = {version = "0.4.22", features = ["clock"], default-features = false}
+log = "0.4.0"
+env_logger = "0.9"
 
 [dependencies.sqlx]
 version = "0.6"
