--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ name = "zero2prod"
 
 [dependencies]
 actix-web = "4"
+tracing-actix-web = "0.7"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 reqwest = "0.11"
 serde = { version = "1", features = ["derive"] }
@@ -24,6 +25,7 @@ tracing = {version = "0.1", features = ["log"]}
 tracing-subscriber = {version = "0.3", features= ["registry", "env-filter"]}
 tracing-bunyan-formatter = "0.3"
 tracing-log = "0.1"
+secrecy = { version = "0.8", features = ["serde"] }
 
 [dependencies.sqlx]
 version = "0.6"
