--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,9 +23,10 @@ log = "0.4.0"
 env_logger = "0.9.0"
 tracing = {version = "0.1", features = ["log"]}
 tracing-subscriber = {version = "0.3", features= ["registry", "env-filter"]}
-tracing-bunyan-formatter = "0.3"
+tracing-bunyan-formatter = "0.3.1"
 tracing-log = "0.1"
 secrecy = { version = "0.8", features = ["serde"] }
+serde-aux = "4"
 
 [dependencies.sqlx]
 version = "0.6"
