--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ tracing-bunyan-formatter = "0.3.1"
 tracing-log = "0.1"
 secrecy = { version = "0.8", features = ["serde"] }
 serde-aux = "4"
+unicode-segmentation = "1.7.1"
 
 [dependencies.sqlx]
 version = "0.6"
@@ -44,3 +45,4 @@ features = [
 
 [dev-dependencies]
 once_cell = "1"
+claims = "0.7"
