--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ tracing-log = "0.1"
 secrecy = { version = "0.8", features = ["serde"] }
 serde-aux = "4"
 unicode-segmentation = "1.7.1"
+rand = "0.8.5"
 
 [dependencies.sqlx]
 version = "0.6"
@@ -46,3 +47,6 @@ features = [
 [dev-dependencies]
 once_cell = "1"
 claims = "0.7"
+fake = "~2.3"
+quickcheck = "0.9"
+quickcheck_macros = "0.9"
