--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ secrecy = { version = "0.8", features = ["serde"] }
 serde-aux = "4"
 unicode-segmentation = "1.7.1"
 rand = "0.8.5"
+validator = "0.16"
 
 [dependencies.sqlx]
 version = "0.6"
