--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,6 @@ name = "zero2prod"
 actix-web = "4"
 tracing-actix-web = "0.7"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
-reqwest = "0.11"
 serde = { version = "1", features = ["derive"] }
 config = "0.13"
 uuid = {version = "1", features = ["v4"]}
@@ -45,9 +44,16 @@ features = [
 	"offline"
 ]
 
+[dependencies.reqwest]
+version = "0.11"
+default-features = false
+features = ["json", "rustls-tls"]
+
 [dev-dependencies]
 once_cell = "1"
 claims = "0.7"
 fake = "~2.3"
 quickcheck = "0.9"
 quickcheck_macros = "0.9"
+wiremock = "0.5"
+serde_json = "1"
