--- a/configuration/base.yaml
+++ b/configuration/base.yaml
@@ -6,3 +6,7 @@ database:
   username: "postgres"
   password: "password"
   database_name: "newsletter"
+email_client:
+  base_url: "localhost"
+  sender_email: "something@gmail.com"
+  authorization_token: "secret token here"
