--- a/configuration/base.yaml
+++ b/configuration/base.yaml
@@ -10,3 +10,4 @@ email_client:
   base_url: "localhost"
   sender_email: "something@gmail.com"
   authorization_token: "secret token here"
+  timeout_milliseconds: 10000
