--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ tracing-log = "0.1"
 secrecy = { version = "0.8", features = ["serde"] }
 serde-aux = "4"
 unicode-segmentation = "1.7.1"
-rand = "0.8.5"
+rand = { version = "0.8.5", features = ["std_rng"] }
 validator = "0.16"
 
 [dependencies.sqlx]
