--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ serde-aux = "4"
 unicode-segmentation = "1.7.1"
 rand = { version = "0.8.5", features = ["std_rng"] }
 validator = "0.16"
+thiserror = "1"
 
 [dependencies.sqlx]
 version = "0.6"
