--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,13 +33,14 @@ thiserror = "1"
 anyhow = "1"
 base64 = "0.21"
 sha3 = "0.9"
-argon2 = {version = "0.4", features = ["std"]}
+argon2 = { version = "0.4", features = ["std"] }
 urlencoding = "2"
 htmlescape = "0.3"
-hmac = {version = "0.12", features = ["std"]}
+hmac = { version = "0.12", features = ["std"] }
 sha2 = "0.10"
 hex = "0.4"
-actix-web-flash-messages = {version = "0.4", features = ["cookies"]}
+actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
+actix-session = { version = "0.7", features = ["redis-rs-tls-session"] }
 
 [dependencies.sqlx]
 version = "0.6"
