--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ tracing-actix-web = "0.7"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 serde = { version = "1", features = ["derive"] }
 config = "0.13"
-uuid = { version = "1", features = ["v4"] }
+uuid = { version = "1", features = ["v4", "serde"] }
 chrono = { version = "0.4.22", features = ["clock"], default-features = false }
 log = "0.4.0"
 env_logger = "0.9.0"
